--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
 
   <body>
-    <h1>Hello!</h1>
+    <h1>Hello I'm Talab Hussein!</h1>
+    <h3>There will be more to come just check back soon! But for now here is a sample</h3>
+    <a href="www.github.com/TalabH">Click Here</a>
   </body>
 
 </html>
