--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
   <body>
     <h1>Hello I'm Talab Hussein!</h1>
-    <h3>There will be more to come just check back soon! But for now here is a sample</h3>
-    <a href="http://www.github.com/TalabH">Click Here</a>
+    <h3>There will be more to come just check back soon!</h3>
   </body>
 
 </html>
