--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Hello I'm Talab Hussein!</h1>
     <h3>There will be more to come just check back soon!</h3>
+    <a href="https://github.com/talabh" target="_blank">Click Here</a>
   </body>
 
 </html>
