added bubbles animation and header section

--- a/index.html
+++ b/index.html
@@ -2,13 +2,39 @@
 <html>
 
   <head>
+  	<meta charset="utf-8">
     <title>Talab Hussein</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
+ 
+  <ul class="bg-bubbles">
+  	<li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+
   <body>
-    <h1>Hello I'm Talab Hussein!</h1>
-    <h3>There will be more to come just check back soon!</h3>
-    <a href="https://github.com/talabh" target="_blank">Click Here</a>
+  	<header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <img class="img-responsive center-block " src="img/me.jpe" alt="">
+                    <h1>Hello! I'm Talab Hussein</h1>
+                </div>
+            </div>
+        </div>
+    </header>
   </body>
 
 </html>
