--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
   	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, height=device-height">
     <title>Talab Hussein</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
