--- a/index.html
+++ b/index.html
@@ -2,40 +2,24 @@
 <html>
 
   <head>
-  	<meta charset="utf-8">
-  	<meta name="viewport" content="width=device-width, height=device-height">
+    <meta charset="utf-8">
     <title>Talab Hussein</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
 
- 
-  <ul class="bg-bubbles">
-  	<li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
-
   <body>
-  	<header>
+      <header>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-responsive center-block " src="img/me.jpe" alt="">
-                    <h1>Hello! I'm Talab Hussein</h1>
-                </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="main">
+                <img class="img-responsive center-block" src="img/me.jpe" alt="my_image">
+                <h1>Hello! I'm Talab Hussein</h1>
+              </div>
             </div>
+          </div>
         </div>
-    </header>
+      </header><!--header section-->
   </body>
-
 </html>
