--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Talab Hussein</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
-      <header>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="main">
-                <img class="img-responsive center-block" src="img/me.jpe" alt="my_image">
-                <h1>Hello! I'm Talab Hussein</h1>
-              </div>
+    <header>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <img class="img-responsive center-block" src="img/me.jpe" alt="">
+            <div class="intro-text">
+              <span class="name">Talab Hussein</span>
+              <span class="skills">Software Engineer & Entrepreneur</span>
             </div>
           </div>
         </div>
-      </header><!--header section-->
+      </div>
+    </header>
   </body>
 </html>
