update index html header section

--- a/index.html
+++ b/index.html
@@ -8,17 +8,33 @@
     <title>Talab Hussein</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/bubbles.css" rel="stylesheet">
+
   </head>
 
-  <body>
+  <ul class="bg-bubbles">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+
+  <body style="overflow: hidden;" >
     <header>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <img class="img-responsive center-block" src="img/me.jpe" alt="">
-            <div class="intro-text">
-              <span class="name">Talab Hussein</span>
-              <span class="skills">Software Engineer & Entrepreneur</span>
+      <div id="wrapper" >
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <img class="img-responsive center-block" src="img/me.jpe" alt="">
+              <div class="intro-text">
+                <span class="name">Talab Hussein</span>
+                <span class="skills">Software Engineer & Entrepreneur</span>
+              </div>
             </div>
           </div>
         </div>
