added social icons

--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <html>
 
   <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Talab Hussein</title>
+    <link rel="icon" href="img/me.jpe">
+
+    <!--Bootstrap Core CSS-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custome CSS-->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/bubbles.css" rel="stylesheet">
+
+    <!--load font awesome-->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
   </head>
 
@@ -22,7 +32,7 @@
     <li></li>
     <li></li>
     <li></li>
-  </ul>
+  </ul> <!--Background bubbles-->
 
   <body style="overflow: hidden;" >
     <header>
@@ -36,9 +46,18 @@
                 <span class="skills">Software Engineer & Entrepreneur</span>
               </div>
             </div>
-          </div>
+          </div> <!--Intro section-->
+          <div class="social">
+            <ul>
+              <li><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://soundcloud.com/talabh" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
+              <li><a href="https://play.google.com/store/apps/developer?id=Gamify+Studios" target="_blank"><i class="fa fa-gamepad"></i></a></li>
+              <li><a href="#" target="_blank"><i class="fa fa-tumblr"></i></a></li>
+            </ul>
+          </div> <!--Social icons-->
         </div>
-      </div>
+      </div>  
     </header>
   </body>
 </html>
