--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand ">
-                <a>Menu</a>
-            </li><hr>
+            <li class="sidebar-brand">
+                <a href="#top">Menu</a>
+            </li>
             <li>
                 <a href="index.html">Home</a>
             </li>
@@ -45,22 +45,13 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <img src="img/me.jpeg" />
-            <h2>Talab Hussein</h2>
-            <h3>Software Engineer &amp; UI/UX Designer</h3>
-            <br>
-            <a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" class="btn btn-dark btn-lg">View Portfolio!</a>
-            <a href="https://github.com/TalabH" class="btn btn-dark btn-lg">View Code</a><br><br>
-            <div class="link">
-                <ul class="list-inline" style="font-size:45px; background-color: rgba(0,0,0,0.5);">
-                    <li><a href="https://github.com/TalabH"><i class="fa fa-github-square"></i></a></li>
-                    <li><a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en"><i class="fa fa-android"></i></a></li>
-                    <li><a href="https://plus.google.com/115050446008183027973"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="https://soundcloud.com/talabh"><i class="fa fa-soundcloud"></i></a></li>
-                    <li><a href="talabhusseinresume.pdf"><i class="fa fa-file-text"></i></a></li>
-                </ul>
-            </div>
-        </div>
+            <h1>About Me</h1><hr style="width: 25%;">
+            <p class="block-text"><strong>I wake up every morning with a <br>passion for building things with technology to <br> improve the human condition and move the world forward. <br>I love every minute of it</strong></p><br>
+            <p class="block-text"><strong>I’m currently pursuing a bachelor degree in Software Engineering <br> and a minor in Computational Mathematical Sciences at Arizona State University.</strong></p><br>
+            <p class="block-text"><strong>Interests: Web and Mobile development, UI/UX Design, Product Management</strong></p><br>
+            <a href="https://webapp4.asu.edu/programs/t5/roadmaps/ASU00/TSSERBS/null/ALL/2016" class="btn btn-dark btn-lg">View Major Courses!</a>
+          </div>
+
     </header>
 
     <!-- jQuery -->
