--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand ">
-                <a>Menu</a>
-            </li><hr>
+            <li class="sidebar-brand">
+                <a href="#top">Menu</a>
+            </li>
             <li>
                 <a href="index.html">Home</a>
             </li>
@@ -45,21 +45,10 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <img src="img/me.jpeg" />
-            <h2>Talab Hussein</h2>
-            <h3>Software Engineer &amp; UI/UX Designer</h3>
-            <br>
-            <a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" class="btn btn-dark btn-lg">View Portfolio!</a>
-            <a href="https://github.com/TalabH" class="btn btn-dark btn-lg">View Code</a><br><br>
-            <div class="link">
-                <ul class="list-inline" style="font-size:45px; background-color: rgba(0,0,0,0.5);">
-                    <li><a href="https://github.com/TalabH"><i class="fa fa-github-square"></i></a></li>
-                    <li><a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en"><i class="fa fa-android"></i></a></li>
-                    <li><a href="https://plus.google.com/115050446008183027973"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="https://soundcloud.com/talabh"><i class="fa fa-soundcloud"></i></a></li>
-                    <li><a href="talabhusseinresume.pdf"><i class="fa fa-file-text"></i></a></li>
-                </ul>
-            </div>
+            <h1>Contact Me</h1><hr style="width: 25%;">
+            <h2> <i class="fa fa-phone" aria-hidden="true"></i>  480 - 282 - 7506</h2>
+            <h2> <i class="fa fa-envelope" aria-hidden="true"></i></i>  talab.hussein@asu.edu</h2>
+            <h2> <i class="fa fa-location-arrow" aria-hidden="true"></i>  Tempe, Arizona, USA</h2>
         </div>
     </header>
 
