added extra features

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body >
 
     <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-info btn-lg toggle rotate" style="margin-right: 2%; margin-top: 2%;"><i class="fa fa-bars"></i></a>
+    <a id="menu-toggle" href="#" class="btn btn-info btn-lg toggle rotating" style="margin-right: 2%; margin-top: 2%;"><i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
@@ -50,14 +50,18 @@
             <h3>Software Engineer &amp; UI/UX Designer</h3>
             <br>
             <a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" class="btn btn-dark btn-lg">View Portfolio!</a>
+            <a href="award.pdf" class="btn btn-dark btn-lg">View Award</a>
             <a href="https://github.com/TalabH" class="btn btn-dark btn-lg">View Code</a><br><br>
             <div class="link">
                 <ul class="list-inline" style="font-size:45px; background-color: rgba(0,0,0,0.5);">
+
+                    <li><a href="talabhusseinresume.pdf"><i class="fa fa-file-text"></i></a></li>
                     <li><a href="https://github.com/TalabH"><i class="fa fa-github-square"></i></a></li>
                     <li><a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en"><i class="fa fa-android"></i></a></li>
                     <li><a href="https://plus.google.com/115050446008183027973"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="https://soundcloud.com/talabh"><i class="fa fa-soundcloud"></i></a></li>
-                    <li><a href="talabhusseinresume.pdf"><i class="fa fa-file-text"></i></a></li>
+                    <li><a href="talab.yelp.com"><i class="fa fa-youtube"></i></a></li>
+                    <li><a href="https://www.youtube.com/watch?v=o2_uT8qcJys"><i class="fa fa-yelp"></i></a></li>
                 </ul>
             </div>
         </div>
