--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="text-vertical-center">
             <img src="img/me.jpeg" />
             <h2>Talab Hussein</h2>
-            <h3>Software Engineer &amp; UI/UX Designer</h3>
+            <h3>Software Engineer &amp; Entrepreneur</h3>
             <br>
             <a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" class="btn btn-dark btn-lg">View Portfolio!</a>
             <a href="award.pdf" class="btn btn-dark btn-lg">View Award</a>
