Fix social links bug

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>About Me</h1><hr style="width: 25%;">
-            <p class="block-text"><strong>I wake up every morning with a <br>passion for building things with technology to <br> improve the human condition and move the world forward. <br>I love every minute of it</strong></p><br>
+            <p class="block-text"><strong>I wake up every morning <br> with a passion for building things with technology <br> to improve the human condition and move the world forward. <br>I love every minute of it!</strong></p><br>
             <p class="block-text"><strong>I’m currently pursuing a bachelor degree in Software Engineering <br> and a minor in Computational Mathematical Sciences at Arizona State University.</strong></p><br>
             <p class="block-text"><strong>Interests: Web and Mobile development, UI/UX Design, Product Management</strong></p><br>
             <a href="https://webapp4.asu.edu/programs/t5/roadmaps/ASU00/TSSERBS/null/ALL/2016" class="btn btn-dark btn-lg">View Major Courses!</a>
