Fix yelp link url bug

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li><a href="https://plus.google.com/115050446008183027973"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="https://soundcloud.com/talabh"><i class="fa fa-soundcloud"></i></a></li>
                     <li><a href="https://www.youtube.com/watch?v=o2_uT8qcJys"><i class="fa fa-youtube"></i></a></li>
-                    <li><a href="http://talab.yelp.me"><i class="fa fa-yelp"></i></a></li>
+                    <li><a href="http://talab.yelp.com"><i class="fa fa-yelp"></i></a></li>
                 </ul>
             </div>
         </div>
