--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body >
 
     <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-info btn-lg toggle rotating" style="margin-right: 2%; margin-top: 2%;"><i class="fa fa-bars"></i></a>
+    <a id="menu-toggle" href="#" class="btn btn-info btn-lg toggle" style="margin-right: 2%; margin-top: 2%;">MENU <i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
