--- a/about.html
+++ b/about.html
@@ -1,79 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Talab Hussein</title>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Bootstrap Core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <title>Talab Hussein</title>
+        <!-- Custom CSS -->
+        <link href="css/style.css" rel="stylesheet">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+        <!-- Custom Fonts -->
+        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    </head>
 
-    <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <body >
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-</head>
+        <!-- Menu Btn -->
+        <a id="menu-toggle" href="#" class="btn btn-info btn-lg toggle">MENU <i class="fa fa-bars"></i></a>
+        <nav id="sidebar-wrapper">
+            <ul class="sidebar-nav text-vertical-center">
 
-<body >
+                <!-- Close Btn -->
+                <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+                
+                <!-- Menu Title -->
+                <li class="sidebar-brand text-vertical-center"></li><hr>
 
-    <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-info btn-lg toggle" style="margin-right: 2%; margin-top: 2%;">MENU <i class="fa fa-bars"></i></a>
-    <nav id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <a href="#top">Menu</a>
-            </li>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about.html">About</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact</a>
-            </li>
-        </ul>
-    </nav>
+                <!-- Index Btn -->
+                <li>
+                    <a href="index.html"><strong>Home</strong></a>
+                </li>
 
-    <!-- Header -->
-    <header id="top" class="header">
-        <div class="text-vertical-center">
-            <h1>About Me</h1><hr style="width: 25%;">
-            <p class="block-text"><strong>I wake up every morning <br> with a passion for building things with technology <br> to improve the human condition and move the world forward. <br>I love every minute of it!</strong></p><br>
-            <p class="block-text"><strong>I’m currently pursuing a bachelor degree in Software Engineering <br> and a minor in Computational Mathematical Sciences at Arizona State University.</strong></p><br>
-            <p class="block-text"><strong>Interests: Web and Mobile development, UI/UX Design, Product Management</strong></p><br>
-            <a href="https://webapp4.asu.edu/programs/t5/roadmaps/ASU00/TSSERBS/null/ALL/2016" class="btn btn-dark btn-lg">View Major Courses!</a>
-          </div>
+                <!-- About Btn -->
+                <li>
+                    <a href="about.html"><strong>About</strong></a>
+                </li>
 
-    </header>
+                <!-- Contact Btn-->
+                <li>
+                    <a href="contact.html"><strong>Contact</strong></a>
+                </li>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+            </ul>
+        </nav>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+        <!-- Header -->
+        <header id="top" class="header">
+            <div class="text-vertical-center">
 
-    <!-- Custom Theme JavaScript -->
-    <script>
-    // Closes the sidebar menu
-    $("#menu-close").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-    // Opens the sidebar menu
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-    </script>
+                <!-- Title -->
+                <h1>About Me</h1><hr style="width: 25%;">
 
-</body>
+                <!-- Intro -->
+                <p class="block-text"><strong>I wake up every morning <br> with a passion for building things with technology <br> to improve the human condition and move the world forward. <br>I love every minute of it!</strong></p><br>
 
+                <!-- Education -->
+                <p class="block-text"><strong>I’m currently pursuing a bachelor degree in Software Engineering <br> and a minor in Computational Mathematical Sciences at Arizona State University.</strong></p><br>
+
+                <!-- Programming Languages -->
+                <h5>T
+
+                <!-- Interests -->
+                <p class="block-text"><strong>Interests: Web and Mobile development, UI/UX Design, Product Management</strong></p><br>
+                <a href="https://webapp4.asu.edu/programs/t5/roadmaps/ASU00/TSSERBS/null/ALL/2016" class="btn btn-dark btn-lg">View Major Courses!</a>
+            </div>
+        </header>
+
+        <!-- jQuery -->
+        <script src="js/jquery.js"></script>
+
+        <!-- Bootstrap Core JavaScript -->
+        <script src="js/bootstrap.min.js"></script>
+
+        <!-- Menu Script -->
+        <script>
+            // Closes the sidebar menu
+            $("#menu-close").click(function(e) {
+                e.preventDefault();
+                $("#sidebar-wrapper").toggleClass("active");
+            });
+            // Opens the sidebar menu
+            $("#menu-toggle").click(function(e) {
+                e.preventDefault();
+                $("#sidebar-wrapper").toggleClass("active");
+            });
+        </script>
+    </body>
 </html>
