--- a/contact.html
+++ b/contact.html
@@ -1,77 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Talab Hussein</title>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Bootstrap Core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <title>Talab Hussein</title>
+        <!-- Custom CSS -->
+        <link href="css/style.css" rel="stylesheet">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+        <!-- Custom Fonts -->
+        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    </head>
 
-    <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <body >
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-</head>
+        <!-- Menu Btn -->
+        <a id="menu-toggle" href="#" class="btn btn-info btn-lg toggle">MENU <i class="fa fa-bars"></i></a>
+        <nav id="sidebar-wrapper">
+            <ul class="sidebar-nav text-vertical-center">
 
-<body >
+                <!-- Close Btn -->
+                <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+                
+                <!-- Menu Title -->
+                <li class="sidebar-brand text-vertical-center"></li><hr>
 
-    <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-info btn-lg toggle" style="margin-right: 2%; margin-top: 2%;">MENU <i class="fa fa-bars"></i></a>
-    <nav id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <a href="#top">Menu</a>
-            </li>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="about.html">About</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact</a>
-            </li>
-        </ul>
-    </nav>
+                <!-- Index Btn -->
+                <li>
+                    <a href="index.html"><strong>Home</strong></a>
+                </li>
 
-    <!-- Header -->
-    <header id="top" class="header">
-        <div class="text-vertical-center">
-            <h1>Contact Me</h1><hr style="width: 25%;">
-            <h2> <i class="fa fa-phone" aria-hidden="true"></i>  480 - 282 - 7506</h2>
-            <h2> <i class="fa fa-envelope" aria-hidden="true"></i></i>  talab.hussein@asu.edu</h2>
-            <h2> <i class="fa fa-location-arrow" aria-hidden="true"></i>  Tempe, Arizona, USA</h2>
-        </div>
-    </header>
+                <!-- About Btn -->
+                <li>
+                    <a href="about.html"><strong>About</strong></a>
+                </li>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+                <!-- Contact Btn-->
+                <li>
+                    <a href="contact.html"><strong>Contact</strong></a>
+                </li>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+            </ul>
+        </nav>
 
-    <!-- Custom Theme JavaScript -->
-    <script>
-    // Closes the sidebar menu
-    $("#menu-close").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-    // Opens the sidebar menu
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-    </script>
+        <!-- Header -->
+        <header id="top" class="header">
+            <div class="text-vertical-center">
+                <!-- Title -->
+                <h1>Contact Me</h1><hr style="width: 25%;">
 
-</body>
+                <!-- Phone -->
+                <h2> <i class="fa fa-phone" aria-hidden="true"></i>480 - 282 - 7506</h2>
 
+                <!-- Email -->
+                <h2> <i class="fa fa-envelope" aria-hidden="true"></i></i>Talab.Hussein@asu.edu</h2>
+
+                <!-- Location -->
+                <h2> <i class="fa fa-location-arrow" aria-hidden="true"></i>Tempe, Arizona, USA</h2>
+            </div>
+        </header>
+
+        <!-- jQuery -->
+        <script src="js/jquery.js"></script>
+
+        <!-- Bootstrap Core JavaScript -->
+        <script src="js/bootstrap.min.js"></script>
+
+        <!-- Menu Script -->
+        <script>
+            // Closes the sidebar menu
+            $("#menu-close").click(function(e) {
+                e.preventDefault();
+                $("#sidebar-wrapper").toggleClass("active");
+            });
+            // Opens the sidebar menu
+            $("#menu-toggle").click(function(e) {
+                e.preventDefault();
+                $("#sidebar-wrapper").toggleClass("active");
+            });
+        </script>
+
+    </body>
 </html>
