Fix about me font size

--- a/about.html
+++ b/about.html
@@ -57,16 +57,16 @@
                 <h1>About Me</h1><hr style="width: 25%;">
 
                 <!-- Intro -->
-                <h5 class="block-text"><strong>I wake up every morning <br> with a passion for building things with technology <br> to improve the human condition and move the world forward. <br>I love every minute of it!</strong></h5>
+                <h5 class="block-text lg"><strong>I wake up every morning <br> with a passion for building things with technology <br> to improve the human condition and move the world forward. <br>I love every minute of it!</strong></h5>
 
                 <!-- Education -->
-                <h5 class="block-text"><strong>I’m currently pursuing a bachelor degree in Software Engineering <br> and a minor in Computational Mathematical Sciences at Arizona State University.</strong></h5>
+                <h5 class="block-text lg"><strong>I’m currently pursuing a bachelor degree in Software Engineering <br> and a minor in Computational Mathematical Sciences at Arizona State University.</strong></h5>
 
                 <!-- Programming Languages -->
-                <h5>Top programming languages: Java, Python, Javascript</h5>
+                <h5 class="block-text lg">Top programming languages: Java, Python, Javascript</h5>
 
                 <!-- Interests -->
-                <h5 class="block-text"><strong>Interests: Web and Mobile development, Product Management, Mathematics, AI, UI/UX Design</strong></h5><br>
+                <h5 class="block-text lg"><strong>Interests: Web and Mobile development, Product Management, Mathematics, AI, UI/UX Design</strong></h5><br>
 
                 <!-- Courses Btn -->
                 <a href="https://webapp4.asu.edu/programs/t5/roadmaps/ASU00/TSSERBS/null/ALL/2016" class="btn btn-dark btn-lg">View Major Courses!</a>
