About me strong bug fix

--- a/about.html
+++ b/about.html
@@ -63,10 +63,10 @@
                 <h5 class="block-text lg"><strong>I’m currently pursuing a bachelor degree in Software Engineering <br> and a minor in Computational Mathematical Sciences at Arizona State University.</strong></h5>
 
                 <!-- Programming Languages -->
-                <h5 class="block-text lg">Top programming languages: Java, Python, Javascript</h5>
+                <h5 class="block-text lg"><strong>Top programming languages: Java, Python, Javascript</strong></h5>
 
                 <!-- Interests -->
-                <h5 class="block-text lg"><strong>Interests: Web and Mobile development, Product Management, Mathematics, AI, UI/UX Design</strong></h5><br>
+                <h5 class="block-text lg"><strong>Interests: Web and Mobile development, Product Management,<br>athematics, AI, UI/UX Design</strong></h5><br>
 
                 <!-- Courses Btn -->
                 <a href="https://webapp4.asu.edu/programs/t5/roadmaps/ASU00/TSSERBS/null/ALL/2016" class="btn btn-dark btn-lg">View Major Courses!</a>
