fix type about section second attempe

--- a/about.html
+++ b/about.html
@@ -66,8 +66,8 @@
                 <h5 class="block-text lg"><strong>Top programming languages: Java, Python, Javascript</strong></h5>
 
                 <!-- Interests -->
-                <h5 class="block-text lg"><strong>Interests: Web and Mobile development, Product Management,<br>M
-                athematics, AI, UI/UX Design</strong></h5><br>
+                <h5 class="block-text lg"><strong>Interests: Web and Mobile development, Product Management,<br>
+                Mathematics, AI, UI/UX Design</strong></h5><br>
 
                 <!-- Courses Btn -->
                 <a href="https://webapp4.asu.edu/programs/t5/roadmaps/ASU00/TSSERBS/null/ALL/2016" class="btn btn-dark btn-lg">View Major Courses!</a>
