--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                 <h5 class="block-text lg"><strong>I wake up every morning <br> with a passion for building things with technology <br> to improve the human condition and move the world forward. <br>I love every minute of it!</strong></h5>
 
                 <!-- Education -->
-                <h5 class="block-text lg"><strong>I’m currently pursuing a bachelor degree in Software Engineering <br> and a minor in Computational Mathematical Sciences at Arizona State University.</strong></h5>
+                <h5 class="block-text lg"><strong>I’m currently pursuing a Bachelor's Degree in Software Engineering <br> and a minor in Computational Mathematical Sciences at Arizona State University.</strong></h5>
 
                 <!-- Programming Languages -->
                 <h5 class="block-text lg"><strong>Top programming languages: Java, Python, Javascript</strong></h5>
