--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	                    <li><a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en"><i class="fa fa-android"></i></a></li>
 
 	                    <!-- ASU -->
-	                    <li><a href=""><i class="fa fa-university" aria-hidden="true"></i></a></li>
+	                    <li><a href="https://webapp4.asu.edu/directory/person/2049006"><i class="fa fa-university" aria-hidden="true"></i></a></li>
 
 	                    <!-- Google + -->
 	                    <li><a href="https://plus.google.com/115050446008183027973"><i class="fa fa-google-plus"></i></a></li>
