--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	                    <li><a href="http://www.pinterest.com/talab_h"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 
 	                    <!-- YouTube -->
-	                    <li><a href="https://www.youtube.com/watch?v=o2_uT8qcJys"><i class="fa fa-youtube"></i></a></li>
+	                    <li><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew"><i class="fa fa-youtube"></i></a></li>
 
 	                    <!-- Yelp -->
 	                    <li><a href="http://talab.yelp.com"><i class="fa fa-yelp"></i></a></li>
