--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@
 
 	            <!-- Social Icons -->
 	            <div class="link">
-	                <ul class="list-inline" style="font-size:27px; background-color: rgba(0,0,0,0.5);">
+	                <ul class="list-inline social" style="font-size:27px; background-color: rgba(0,0,0,0.5);">
 
 	                	<!-- GitHub -->
-	                    <li><a href="https://github.com/TalabH"><i class="fa fa-github-square"></i></a></li>
+	                    <li><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github-square"></i></a></li>
 
 	                    <!-- Start up -->
-	                    <li><a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en"><i class="fa fa-android"></i></a></li>
+	                    <li><a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" target="_blank"><i class="fa fa-android"></i></a></li>
 
 	                    <!-- ASU -->
-	                    <li><a href="https://webapp4.asu.edu/directory/person/2049006"><i class="fa fa-university" aria-hidden="true"></i></a></li>
+	                    <li><a href="https://webapp4.asu.edu/directory/person/2049006" target="_blank"><i class="fa fa-university"></i></a></li>
 
 	                    <!-- Google + -->
-	                    <li><a href="https://plus.google.com/115050446008183027973"><i class="fa fa-google-plus"></i></a></li>
+	                    <li><a href="https://plus.google.com/115050446008183027973" target="_blank"><i class="fa fa-google-plus"></i></a></li>
 
 	                    <!-- SoundCloud -->
-	                    <li><a href="https://soundcloud.com/talabh"><i class="fa fa-soundcloud"></i></a></li>
+	                    <li><a href="https://soundcloud.com/talabh" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
 
 	                    <!-- Pinterest -->
-	                    <li><a href="http://www.pinterest.com/talab_h"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+	                    <li><a href="http://www.pinterest.com/talab_h" target="_blank"><i class="fa fa-pinterest"></i></a></li>
 
 	                    <!-- YouTube -->
-	                    <li><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew"><i class="fa fa-youtube"></i></a></li>
+	                    <li><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew" target="_blank"><i class="fa fa-youtube"></i></a></li>
 
 	                    <!-- Yelp -->
-	                    <li><a href="http://talab.yelp.com"><i class="fa fa-yelp"></i></a></li>
+	                    <li><a href="http://talab.yelp.com" target="_blank"><i class="fa fa-yelp"></i></a></li>
 
 	                </ul>
 	            </div>
@@ -121,5 +121,16 @@
 	        $("#sidebar-wrapper").toggleClass("active");
 	    });
 	    </script>
+
+	    <!-- Google Analytics Script -->
+	    <script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-85375982-1', 'auto');
+		  ga('send', 'pageview');
+		</script>
 	</body>
 </html>
