--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	    <nav id="sidebar-wrapper">
 	        <ul class="sidebar-nav text-vertical-center">
 
-	        	<!-- Close Btn -->
+	            <!-- Close Btn -->
 	            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
 	            
 	            <!-- Menu Title -->
@@ -70,7 +70,7 @@
 	            <div class="link">
 	                <ul class="list-inline social" style="font-size:27px; background-color: rgba(0,0,0,0.5);">
 
-	                	<!-- GitHub -->
+	                    <!-- GitHub -->
 	                    <li><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github-square"></i></a></li>
 
 	                    <!-- Start up -->
@@ -87,6 +87,9 @@
 
 	                    <!-- YouTube -->
 	                    <li><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew" target="_blank"><i class="fa fa-youtube"></i></a></li>
+				
+			    <!-- Taiga -->
+	                    <li><a href="https://tree.taiga.io/profile/talab" target="_blank"><i class="fa fa-certificate"></i></a></li>
 	                </ul>
 	            </div>
 	        </div>
