--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
+        <!-- Animate CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
+
         <!-- Custom CSS -->
         <link href="css/style.css" rel="stylesheet">
 
@@ -50,10 +53,10 @@
         </nav>
 
         <!-- Header -->
-        <header id="top" class="header">
+        <header id="top" class="header animated fadeIn">
             <div class="text-vertical-center">
                 <!-- Title -->
-                <h1>Contact Me</h1><hr style="width: 25%;">
+                <h1 class="animated zoomIn">Contact Me</h1><hr style="width: 25%;">
 
                 <!-- Phone -->
                 <h2> <i class="fa fa-phone" aria-hidden="true"></i> 480 - 282 - 7506</h2>
