--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	    <!-- Bootstrap Core CSS -->
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
 
+	    <!-- Animate CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
+
 	    <!-- Custom CSS -->
 	    <link href="css/style.css" rel="stylesheet">
 
@@ -51,7 +54,7 @@
 
 	    <!-- Header -->
 	    <header id="top" class="header">
-	        <div class="text-vertical-center">
+	        <div class="text-vertical-center animated bounce">
 
 	        	<!-- Title -->
 	            <img src="img/me.jpeg" />
@@ -67,8 +70,11 @@
 	            <a href="https://github.com/TalabH" class="btn btn-dark btn-lg">View Code</a><br><br>
 
 	            <!-- Social Icons -->
-	            <div class="link">
-	                <ul class="list-inline social" style="font-size: 32px; background-color: rgba(0,0,0,0.637);">
+	            <div class="link animated fadeIn">
+	                <ul class="list-inline social" style="font-size: 40px; background-color: rgba(0,0,0,0.637);">
+
+	                	<!-- Twitter -->
+	                	<li><a href="https://www.twitter.com/talabhh" target="_blank"><i class="fa fa-twitter"></i></a></li>
 
 	                    <!-- GitHub -->
 	                    <li><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github-square"></i></a></li>
@@ -79,16 +85,13 @@
 	                    <!-- ASU -->
 	                    <li><a href="https://webapp4.asu.edu/directory/person/2049006" target="_blank"><i class="fa fa-university"></i></a></li>
 
-	                    <!-- Google + -->
-	                    <li><a href="https://plus.google.com/115050446008183027973" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-
 	                    <!-- SoundCloud -->
 	                    <li><a href="https://soundcloud.com/talabh" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
 
 	                    <!-- YouTube -->
 	                    <li><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew" target="_blank"><i class="fa fa-youtube"></i></a></li>
 				
-			    <!-- Taiga -->
+			    		<!-- Taiga -->
 	                    <li><a href="https://tree.taiga.io/profile/talab" target="_blank"><i class="fa fa-certificate"></i></a></li>
 	                </ul>
 	            </div>
