--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
+        <!-- Animate CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
+
         <!-- Custom CSS -->
         <link href="css/style.css" rel="stylesheet">
 
@@ -54,7 +57,7 @@
             <div class="text-vertical-center">
 
                 <!-- Title -->
-                <h1>About Me</h1><hr style="width: 25%;">
+                <h1 class="animated zoomIn">About Me</h1><hr style="width: 25%;">
 
                 <!-- Intro -->
                 <h5 class="block-text lg"><strong>I wake up every morning <br> with a passion for building things with technology <br> to improve the human condition and move the world forward. <br>I love every minute of it!</strong></h5>
@@ -63,11 +66,11 @@
                 <h5 class="block-text lg"><strong>I’m currently pursuing a Bachelor's Degree in Software Engineering <br> and a minor in Computational Mathematical Sciences at Arizona State University.</strong></h5>
 
                 <!-- Programming Languages -->
-                <h5 class="block-text lg"><strong>Top programming languages: Java, Python, Javascript</strong></h5>
+                <h5 class="block-text lg"><strong>Top programming languages: C#, Java, Python, Javascript</strong></h5>
 
                 <!-- Interests -->
                 <h5 class="block-text lg"><strong>Interests: Web and Mobile development, Product Management,<br>
-                Mathematics, AI, UI/UX Design</strong></h5><br>
+                Mathematics, AI, UI/UX Design, CyberSecuirty, Microsoft HoloLens</strong></h5><br>
             </div>
         </header>
 
