fix bug about page animated fadeIn

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         </nav>
 
         <!-- Header -->
-        <header id="top" class="header">
+        <header id="top" class="header animated fadeIn">
             <div class="text-vertical-center">
 
                 <!-- Title -->
