--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 	</head>
 
-	<body >
+	<body>
 
 	    <!-- Menu Btn -->
 	    <a id="menu-toggle" href="#" class="btn btn-info btn-lg toggle">MENU <i class="fa fa-bars"></i></a>
@@ -54,7 +54,7 @@
 
 	    <!-- Header -->
 	    <header id="top" class="header">
-	        <div class="text-vertical-center animated bounce">
+	        <div class="text-vertical-center">
 
 	        	<!-- Title -->
 	            <img src="img/me.jpeg" />
@@ -74,25 +74,25 @@
 	                <ul class="list-inline social" style="font-size: 40px; background-color: rgba(0,0,0,0.637);">
 
 	                	<!-- Twitter -->
-	                	<li><a href="https://www.twitter.com/talabhh" target="_blank"><i class="fa fa-twitter"></i></a></li>
+	                	<li class="animated bounceInUp icon_one"><a href="https://www.twitter.com/talabhh" target="_blank"><i class="fa fa-twitter"></i></a></li>
 
 	                    <!-- GitHub -->
-	                    <li><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github-square"></i></a></li>
+	                    <li class="animated bounceInUp icon_two"><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github-square"></i></a></li>
 
 	                    <!-- Start up -->
-	                    <li><a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" target="_blank"><i class="fa fa-android"></i></a></li>
+	                    <li class="animated bounceInUp icon_three"><a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" target="_blank"><i class="fa fa-android"></i></a></li>
 
 	                    <!-- ASU -->
-	                    <li><a href="https://webapp4.asu.edu/directory/person/2049006" target="_blank"><i class="fa fa-university"></i></a></li>
+	                    <li class="animated bounceInUp icon_four"><a href="https://webapp4.asu.edu/directory/person/2049006" target="_blank"><i class="fa fa-university"></i></a></li>
 
 	                    <!-- SoundCloud -->
-	                    <li><a href="https://soundcloud.com/talabh" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
+	                    <li class="animated bounceInUp icon_five"><a href="https://soundcloud.com/talabh" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
 
 	                    <!-- YouTube -->
-	                    <li><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew" target="_blank"><i class="fa fa-youtube"></i></a></li>
+	                    <li class="animated bounceInUp icon_six"><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew" target="_blank"><i class="fa fa-youtube"></i></a></li>
 				
 			    		<!-- Taiga -->
-	                    <li><a href="https://tree.taiga.io/profile/talab" target="_blank"><i class="fa fa-certificate"></i></a></li>
+	                    <li class="animated bounceInUp icon_seven"><a href="https://tree.taiga.io/profile/talab" target="_blank"><i class="fa fa-certificate"></i></a></li>
 	                </ul>
 	            </div>
 	        </div>
