--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 	                    <li class="animated bounceInUp icon_two"><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github-square"></i></a></li>
 				
 			    <!-- YouTube -->
-	                    <li class="animated bounceInUp icon_six"><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew" target="_blank"><i class="fa fa-youtube"></i></a></li>
+	                    <li class="animated bounceInUp icon_three"><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew" target="_blank"><i class="fa fa-youtube"></i></a></li>
 	                    
 			    <!-- SoundCloud -->
-	                    <li class="animated bounceInUp icon_five"><a href="https://soundcloud.com/talabh" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
+	                    <li class="animated bounceInUp icon_four"><a href="https://soundcloud.com/talabh" target="_blank"><i class="fa fa-soundcloud"></i></a></li>
 
 	                    <!-- Taiga -->
-	                    <li class="animated bounceInUp icon_seven"><a href="https://tree.taiga.io/profile/talab" target="_blank"><i class="fa fa-certificate"></i></a></li>
+	                    <li class="animated bounceInUp icon_five"><a href="https://tree.taiga.io/profile/talab" target="_blank"><i class="fa fa-certificate"></i></a></li>
 	                </ul>
 	            </div>
 	        </div>
