--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 	            <!-- Buttons -->
 
 	            <!-- Btn1 Portfolio -->
-	            <a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" class="btn btn-dark btn-lg">View Portfolio!</a>
+	            <a href="https://github.com/TalabH" class="btn btn-dark btn-lg">View Portfolio!</a>
 
 	            <!-- Btn2 Code/GitHub -->
-	            <a href="https://github.com/TalabH" class="btn btn-dark btn-lg">View Code</a><br><br>
+	            <a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" class="btn btn-dark btn-lg">My Startup</a><br><br>
 
 	            <!-- Social Icons -->
 	            <div class="link animated fadeIn">
