--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	            <a href="https://github.com/TalabH" class="btn btn-dark btn-lg">View Portfolio!</a>
 
 	            <!-- Btn2 Code/GitHub -->
-	            <a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" class="btn btn-dark btn-lg">My Startup</a><br><br>
+	            <a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" class="btn btn-dark btn-lg">Gamify Studios</a><br><br>
 
 	            <!-- Social Icons -->
 	            <div class="link animated fadeIn">
