--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	        	<!-- Title -->
 	            <img src="img/me.jpeg" />
 	            <h2>Talab Hussein</h2>
-	            <!-- <h3>Software Engineer &amp; Entrepreneur</h3><br> -->
+	            <h3>Software Engineer &amp; Entrepreneur</h3><br>
 
 	            <!-- Buttons -->
 
