--- a/index.html
+++ b/index.html
@@ -73,17 +73,20 @@
 	            <div class="link animated fadeIn">
 	                <ul class="list-inline social" style="font-size: 40px; background-color: rgba(0,0,0,0.637);">
 
-	                	<!-- Twitter -->
-	                    <li class="animated bounceInUp icon_one"><a href="https://www.twitter.com/talabhh" target="_blank"><i class="fa fa-twitter"></i></a></li>
+	                    <!-- LinkedIn -->
+			    <li class="animated bounceInUp icon_one"><a href="https://www.linkedin.com/in/talabhussein/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+	
+		            <!-- Twitter -->
+	                    <li class="animated bounceInUp icon_two"><a href="https://www.twitter.com/talabhh" target="_blank"><i class="fa fa-twitter"></i></a></li>
 
 	                    <!-- GitHub -->
-	                    <li class="animated bounceInUp icon_two"><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github-square"></i></a></li>
+	                    <li class="animated bounceInUp icon_three"><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github-square"></i></a></li>
 				
 			    <!-- YouTube -->
-	                    <li class="animated bounceInUp icon_three"><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew" target="_blank"><i class="fa fa-youtube"></i></a></li>
+	                    <li class="animated bounceInUp icon_four"><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew" target="_blank"><i class="fa fa-youtube"></i></a></li>
 	 
 	                    <!-- Taiga -->
-	                    <li class="animated bounceInUp icon_four"><a href="https://tree.taiga.io/profile/talab" target="_blank"><i class="fa fa-certificate"></i></a></li>
+	                    <li class="animated bounceInUp icon_five"><a href="https://tree.taiga.io/profile/talab" target="_blank"><i class="fa fa-certificate"></i></a></li>
 	                </ul>
 	            </div>
 	        </div>
