--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                 <h2> <i class="fa fa-envelope" aria-hidden="true"></i></i> Talab.Hussein@asu.edu</h2>
 
                 <!-- Location -->
-                <h2> <i class="fa fa-location-arrow" aria-hidden="true"></i> Tempe, Arizona, USA</h2>
+                <h2> <i class="fa fa-location-arrow" aria-hidden="true"></i> Greater Los Angeles Area </h2>
             </div>
         </header>
 
