--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 	        	<!-- Title -->
 	            <img src="img/me.jpeg" />
 	            <h2>Talab Hussein</h2>
-
+		    <h3>Software Engineer &amp; Entrepreneur</h3><br>
+			
 	            <!-- Buttons -->
 
 	            <!-- Btn1 Portfolio -->
