--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			    <li class="animated bounceInUp icon_one"><a href="https://www.linkedin.com/in/talabhussein/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 	
 		            <!-- Twitter -->
-	                    <li class="animated bounceInUp icon_two"><a href="https://www.twitter.com/talabhh" target="_blank"><i class="fa fa-twitter"></i></a></li>
+	                    <li class="animated bounceInUp icon_two"><a href="https://twitter.com/74148HH" target="_blank"><i class="fa fa-twitter"></i></a></li>
 
 	                    <!-- GitHub -->
 	                    <li class="animated bounceInUp icon_three"><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github-square"></i></a></li>
