--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	    });
 	    </script>
 
-	    <!-- I can see you -->
+	    <!-- I can see you 0.0 -->
 	    <script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
