aded google analytics tacking script

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
           <div class="col-sm-8 py-4">
             <h4 class="text-white">About</h4>
-            <p class="text-muted">I’m currently pursuing a bachelor’s degree in Software Engineering with a primary focus on Web and Mobile Development and a secondary focus in cybersecurity at Arizona State University. Currently seeking full-time opportunities for Spring 2018. Thank you very much for your time and consideration!</p>
+            <p class="text-muted">I’m currently pursuing a bachelor’s degree in Software Engineering with a primary focus on Web and Mobile Development and a secondary focus on cybersecurity at Arizona State University. Currently seeking full-time opportunities for Spring 2018. Thank you very much for your time and consideration!</p>
           </div>
           <div class="col-sm-4 py-4">
             <h4 class="text-white">Contact</h4>
@@ -63,50 +63,50 @@
         <h1 class="jumbotron-heading text-center">Portfolio</h1>
         <div class="row">
           <div class="card">
-            <img src="imgs/superhero.jpg" alt="Card image cap">
+            <img src="imgs/superhero.jpg">
             <p class="card-text text-center">Meet your new superhero! He needs you more than ever. Only you can keep him safe. Can you take the challenge?<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
             <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.SuperHeroJump&hl=en" class="btn btn-danger btn-sm">Download</a>
           </div>
           <div class="card">
-            <img src="imgs/abc.jpg" alt="Card image cap">
+            <img src="imgs/abc.jpg">
             <p class="card-text text-center">ABC VR is an educational application aimed at raising awareness of the importance of STEM Education.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
             <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.ABCVR&hl=en" class="btn btn-danger btn-sm">Download</a>
           </div>
           <div class="card">
-            <img src="imgs/bump.jpg" alt="Card image cap">
+            <img src="imgs/bump.jpg">
             <p class="card-text text-center">Bump Ball is an interactive game that pushes the boundaries of your speed and reaction.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
             <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.BumpBall&hl=en" class="btn btn-danger btn-sm">Download</a>
           </div>
 
           <div class="card">
-            <img src="imgs/memoranda.png" alt="Card image cap">
+            <img src="imgs/memoranda.png">
             <p class="card-text text-center">The purpose of this project is to enhance the Memoranda app to support Time Management for programmers.<br>Tech Stack: Java, Eclipse IDE.</p>
             <a href="https://github.com/cst316/spring16project-Fortran" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
-            <img src="imgs/media.png" alt="Card image cap">
+            <img src="imgs/media.png">
             <p class="card-text text-center">This is a media management system project a part of a class on database management.<br>Tech Stack: PHP, MySQL, Apache Ant.</p>
             <a href="https://github.com/TalabH/MediaManagementSystem" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
-            <img src="imgs/car.png" alt="Card image cap">
+            <img src="imgs/car.png">
             <p class="card-text text-center">Intelligent Interactive Infotainment System for the Software Enginneering Degree Capstone project.<br>Tech Stack: Matlab, Java, Android Studio.</p>
             <a href="https://github.com/mazaval4/carApp" class="btn btn-primary btn-sm">View</a>
           </div>
 
           <div class="card">
-            <img src="imgs/anna.jpg" alt="Card image cap">
+            <img src="imgs/anna.jpg">
             <p class="card-text text-center">Do you ever feel stressed, anxious, or down? Anna helps you feel stronger, happier, and more fulfilled.<br>Tech Stack: Javascript, Ionic.</p>
             <a href="https://devpost.com/software/hackarizona-2017-anna-therapist" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
-            <img src="imgs/42.jpg" alt="Card image cap">
+            <img src="imgs/42.jpg">
             <p class="card-text text-center">Our mixed reality game uses the Microsoft HoloLens. The user sees the game as holographic projections.<br>Tech Stack: Microsoft HoloLens, Unity 3D, Blender 3D.</p>
             <a href="https://devpost.com/software/42-cqaj95" class="btn btn-primary btn-sm">View</a>
           </div>
           <div class="card">
-            <img src="imgs/autonotes.jpg" alt="Card image cap">
-            <p class="card-text text-center">This is an automatic note taker, where it transforms the professor's speeach to text during lectures.<br>Tech Stack: Javascript, Microsoft Speech SDK.</p>
+            <img src="imgs/autonotes.jpg">
+            <p class="card-text text-center">This is an automatic note taker, where it transforms the professor's speech to text during lectures.<br>Tech Stack: Javascript, Microsoft Speech SDK.</p>
             <a href="https://devpost.com/software/accompanote" class="btn btn-primary btn-sm">View</a>
           </div>
         </div>
@@ -123,8 +123,18 @@
       </div>
     </footer>
 
+
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-85375982-3', 'auto');
+	  ga('send', 'pageview');
+	</script>
   </body>
 </html>
